--- a/cempaka.html
+++ b/cempaka.html
@@ -70,25 +70,25 @@
             const estateData = {
                 "id": "cempaka",
                 "name": "Ladang Cempaka",
-                "reportInfo": "Data based on PA Report (Oct 2024) & Agronomy Report (Aug 2024).",
+                "reportInfo": "Data based on PA Report (Oct 2024) & Agronomy Report (July 2025).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Estate Area",
                         "lines": [
-                            "Total Planted: 451.00 ha",
+                            "Total Planted: 494.33 ha",
                             "Mature: 167.64 ha",
-                            "Immature: 283.36 ha"
+                            "Immature: 326.69 ha"
                         ]
                     },
                     "yield": {
                         "title": "Yield/Ha (Actual vs Budget)",
                         "value": "13.86 / 15.00 MT",
-                        "note": "YTD as of Sep 2024"
+                        "note": "YTD as of Sep 2024 (PA Report)"
                     },
                     "cost": {
                         "title": "FFB Cost/Tonne (Actual vs Budget)",
                         "value": "RM 291.05 / RM 340.84",
-                        "note": "Ex-Estate, YTD as of Sep 2024"
+                        "note": "Ex-Estate, YTD as of Sep 2024 (PA Report)"
                     },
                     "upkeep": {
                         "title": "Upkeep Status",
@@ -98,38 +98,38 @@
                      "labour": {
                         "title": "Labour Status",
                         "value": "Shortage",
-                        "note": "Deficit of 7 workers"
+                        "note": "Deficit of 5 immature harvesters"
                     }
                 },
                 "keyMetrics": [
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Status", "value": "Shortage (-7 workers)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Under Control (Rats)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "OER % (YTD)", "value": "19.18%" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Harvester Prod.", "value": "1.56 MT/md (Needs Improvement)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "~15 days (Acceptable)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Manuring Delayed" }
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Ratio", "value": "1:18 ha (Short 5 Harvesters)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Under Control (Rats at 4%)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "OER % (YTD)", "value": "19.18% (PA Report)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Harvester Prod.", "value": "1.56 MT/md (PA Report)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "~14-17 days (Acceptable)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Manuring 41-52% Done" }
                 ],
                 "chartData": {
                     "production": {
-                        "labels": ["Jan-24", "Feb-24", "Mar-24", "Apr-24", "May-24", "Jun-24", "Jul-24", "Aug-24", "Sep-24"],
-                        "ffb": [248, 155, 142, 237, 269, 290, 315, 322, 345],
-                        "rainfall": [391, 19, 89, 83, 125, 213, 61, 71, 270],
-                        "note": "*FFB production (dotted line) and rainfall data for 2024 (YTD September)."
+                        "labels": ["Jan-25", "Feb-25", "Mar-25", "Apr-25", "May-25", "Jun-25"],
+                        "ffb": [307.34, 209.34, 295.70, 314.46, 267.46, 366.24],
+                        "rainfall": [151.0, 43.0, 138.0, 339.0, 206.0, 171.0],
+                        "note": "*FFB production and rainfall data for 2025 (YTD June)."
                     },
                     "ageProfile": {
-                        "labels": ["Young Mature (>3 years)", "Immature (<3 years)"],
-                        "data": [37, 63],
-                        "title": "Ladang Cempaka - Palm Age Distribution",
-                        "note": "*Source: PA Report 2/2024, Pg. 9."
+                        "labels": ["Mature (P18 - 2018)", "Immature (P22 - 2022)", "Immature (P23 - 2023)"],
+                        "data": [34, 30, 36],
+                        "title": "Ladang Cempaka - Palm Age Distribution (by Planted Year)",
+                        "note": "*Source: Agronomy Report 2/2025, Pg. 8."
                     }
                 },
                 "observations": [
-                    "<b>Overall Performance is Mediocre:</b> The estate needs to resolve repetitive issues, particularly the quality of weeding and pruning standards. <span class='observation-ref'>(PAR Pg. 7)</span>",
-                    "<b>Immature Area Management:</b> Weeding quality is poor in immature areas (P22B, P23A). Palm supplying is incomplete, and EFB mulching is progressing very slowly. Pest control for Oryctes and Apogonia is required. <span class='observation-ref'>(AR Pg. 16-25; PAR Pg. 6, 36-45)</span>",
-                    "<b>Over-Pruning:</b> A high incidence of over-pruned palms was found in the mature area (P18C), which is unacceptable and must be resolved. <span class='observation-ref'>(PAR Pg. 5, 22)</span>",
-                    "<b>Labour Productivity & Shortage:</b> Harvester productivity is low at 1.56 tons/man-day. The estate has a shortage of 7 workers, including 5 for upkeep. <span class='observation-ref'>(PAR Pg. 11)</span>",
-                    "<b>Delayed Manuring:</b> The second-half manuring program started late due to delays in fertilizer delivery. <span class='observation-ref'>(AR Pg. 8)</span>",
-                    "<b>Rat Infestation:</b> Rat infestation is under control after three rounds of baiting, but fresh damage symptoms are still detected. Close monitoring is required. <span class='observation-ref'>(AR Pg. 14; PAR Pg. 5, 25)</span>"
+                    "<b>Overall Performance is Mediocre:</b> The estate needs to resolve repetitive issues, particularly the quality of weeding and pruning standards, which are behind schedule. <span class='observation-ref'>(PAR Pg. 18-28, 48-50)</span>",
+                    "<b>Critical Labour Shortage:</b> The estate has a deficit of 7 workers, including a shortage of 5 upkeep workers and 5 immature harvesters. This impacts multiple field operations and contributes to low harvester productivity (1.56 tons/man-day). <span class='observation-ref'>(PAR Pg. 11; AR Pg. 25)</span>",
+                    "<b>Poor Immature Area Management:</b> Weeding is poor, palm supplying is incomplete, and EFB mulching is progressing very slowly, especially in P22B and P23A. <span class='observation-ref'>(PAR Pg. 36-45; AR Pg. 5)</span>",
+                    "<b>Widespread Over-Pruning:</b> A high incidence of over-pruned palms was found in both mature (PA report) and immature areas (AR report), which is unacceptable and must be resolved immediately. <span class='observation-ref'>(PAR Pg. 22; AR Pg. 27-28)</span>",
+                    "<b>Rat Infestation Requires Monitoring:</b> While rat infestation has been reduced to ~4% after baiting, fresh damage is still detected. Close monitoring is required to keep the pest under control. <span class='observation-ref'>(AR Pg. 22, 33-34)</span>",
+                    "<b>Delayed Manuring Program:</b> The first-half manuring program was delayed due to late fertilizer delivery, although the issue has since been resolved. <span class='observation-ref'>(AR Pg. 11)</span>"
                 ],
                 "reports": {
                     "plantation": {
@@ -147,11 +147,11 @@
                         "Immature": "P22B: Palm supply is incomplete, EFB mulching not done, and palm circles are weedy. P23A: EFB mulching is very slow (only 19 ha completed), weeding is behind schedule, and Oryctes damage detected. (Source: PAR, Pg. 36-45)"
                     },
                     "agronomy": {
-                        "Executive Summary": "The main focus is on the immature areas. Weeding standards need significant improvement to establish good ground cover. Pest control for Oryctes and rats needs close monitoring. Palm supplying and EFB mulching must be expedited. The manuring program was delayed. (Source: AR, Pg. 4-5, 27)",
-                        "Nutrient Inputs/Progress of Manuring": "First half manuring was completed. The second half program was delayed due to late fertilizer delivery. Manuring for immature areas is 37% complete for the year. (Source: AR, Pg. 8-9)",
-                        "Agronomic Observation": "P18C (Mature): Canopy and harvesting standards are acceptable, but weeding is behind schedule and VOPs are present. Rat infestation is under control. P22B (Immature): Palm growth is acceptable, but weeding needs improvement. Oryctes and rat damage observed. P23A (Immature): Planting is incomplete in some areas, EFB mulching is slow, and weeding is behind schedule. Pest damage (Apogonia, Oryctes) is present. (Source: AR, Pg. 10-25)",
-                        "Yield Performance": "Yield for P18C increased by 6% compared to the same period last year but is slightly below expectation. Production is expected to increase in the third quarter. (Source: AR, Pg. 26-27)",
-                        "Fertilizer Recommendation": "The 2025 program has been formulated. It includes Mixture B, Kieserite, and RP for mature areas, and compound fertilizers for immature areas. (Source: AR, Pg. 28-29)"
+                        "Executive Summary": "Focus is required on weeding standards, VOP eradication, and resolving labour shortages for immature harvesting. Rat infestation has been reduced but requires monitoring. Manuring progress has improved after initial delays. (Source: AR, Pg. 5, 45)",
+                        "Nutrient Inputs/Progress of Manuring": "First-half manuring is 41% complete for mature areas and 52% for immature. Delivery issues for Mixture B have been resolved, and the next consignment is expected in August. (Source: AR, Pg. 11-12)",
+                        "Agronomic Observation": "P18C (Mature): Yield has increased by 35.9%. Weeding and pruning are slightly delayed. Rat attacks reduced from 15% to 4%. P22 (Immature): Yield is low in P22D due to accessibility issues and labour shortage. Over-pruning was observed. VOPs need eradication. P23 (Immature): Palm vigour is improving. Rat and Oryctes are under control, but Apogonia requires treatment. (Source: AR, Pg. 13-41)",
+                        "Yield Performance": "P18C yield increased by 35.9% compared to last year. P22B immature yield is 8.7% above estimate, but P22D is 54.4% below due to labour and access issues. Harvesting rounds for immature fields are behind schedule. (Source: AR, Pg. 43-44)",
+                        "Fertilizer Recommendation": "The 2026 fertilizer program has been formulated, recommending Mixture B, RP, and Kieserite for mature palms, and compound fertilizers for immature areas. (Source: AR, Pg. 46-47)"
                     }
                 },
                 "policy": " <div class='policy-item'><p class='font-semibold'>Immature Upkeep</p><p class='text-sm text-gray-600'><b>Policy Ref: UPKEEP-IM-01:</b> EFB mulching must be completed within 3 months of planting. Palm supplying must be completed within 6 months.</p><p class='text-sm text-gray-600'><b>Policy Ref: WEED-IM-03:</b> Weeding rounds in immature areas must be strictly followed as per schedule to prevent competition and establish ground cover.</p></div> <div class='policy-item'><p class='font-semibold'>Pruning Standards</p><p class='text-sm text-gray-600'><b>Policy Ref: PRUNE-STD-01:</b> Over-pruning is strictly prohibited. Field supervisors must conduct pre- and post-pruning checks to ensure compliance.</p></div> <div class='policy-item'><p class='font-semibold'>Labour Management</p><p class='text-sm text-gray-600'><b>Policy Ref: HR-MANPOWER-01:</b> Estate managers must maintain the budgeted worker-to-land ratio. Any shortage exceeding 10% must be reported with a recruitment plan.</p></div>"
@@ -199,7 +199,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-4 mb-8">${summaryMetricsHTML}</div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-4 border-b pb-2">Key Metrics & Agronomic Status</h3><div class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-4">${keyMetricsHTML}</div></div>
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
-                            <div><h3 class="text-xl font-semibold mb-2">Monthly Production vs Rainfall (2024)</h3><div class="chart-container"><canvas id="prodChart-${estate.id}"></canvas></div><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
+                            <div><h3 class="text-xl font-semibold mb-2">Monthly Production vs Rainfall (2025)</h3><div class="chart-container"><canvas id="prodChart-${estate.id}"></canvas></div><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
                             <div><h3 class="text-xl font-semibold mb-2">Palm Age Profile</h3><div class="pie-chart-container"><canvas id="ageChart-${estate.id}"></canvas></div><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.ageProfile.note}</p></div>
                         </div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-2 border-b pb-2">Key Observations & Issues</h3><ul class="list-disc list-inside space-y-2 text-gray-700 mt-4">${observationsHTML}</ul></div>
@@ -240,7 +240,7 @@
                         type: 'pie',
                         data: {
                             labels: estateData.chartData.ageProfile.labels,
-                            datasets: [{ data: estateData.chartData.ageProfile.data, backgroundColor: ['#eab308', '#fde047'], hoverOffset: 4 }]
+                            datasets: [{ data: estateData.chartData.ageProfile.data, backgroundColor: ['#ca8a04', '#fde047', '#facc15'], hoverOffset: 4 }]
                         },
                         options: { responsive: true, maintainAspectRatio: false, plugins: { title: { display: true, text: estateData.chartData.ageProfile.title, font: { size: 16 } }, legend: { position: 'right' } } }
                     });
