--- a/cenderawasih.html
+++ b/cenderawasih.html
@@ -69,7 +69,7 @@
             const estateData = {
                 "id": "cenderawasih",
                 "name": "Ladang Cenderawasih",
-                "reportInfo": "Data based on PA Report (Apr 2025), Agronomy Report (Feb 2025) & Pinfosys Report (Jan 2022).",
+                "reportInfo": "Data based on PA Report (Apr 2025), Agronomy Report (Aug 2025) & Pinfosys Report (Jan 2022).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Estate Area",
@@ -89,31 +89,31 @@
                         "value": "RM 241.87 / RM 293.70",
                         "note": "18% lower than budget"
                     },
-                    "labour": {
-                        "title": "Labour Status",
-                        "value": "Adequate",
-                        "note": "1:14 ha ratio"
+                    "yield_ytd": {
+                        "title": "Yield/Ha (YTD Jul 2025 vs 2024)",
+                        "value": "11.16 / 11.98 MT",
+                        "note": "7% lower than 2024 YTD"
                     },
                      "pests": {
                         "title": "Pest Status",
                         "value": "High (Rats)",
-                        "note": "Damage >19% in all fields"
+                        "note": "Infestation persists despite baiting"
                     }
                 },
                 "keyMetrics": [
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Ratio", "value": "1:14 ha (Adequate)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "High (Rats)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "High (Rats, Ganoderma)" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "OER % (2024)", "value": "19.33%" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Harvester Prod.", "value": "1.52 MT/md (Needs Improvement)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "~15 days (Acceptable)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "K Deficiency (Orange Spotting)" }
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Mechanization", "value": "Below Optimal (Badang/Timac)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "~15-20 days (Slightly Extended)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "N, Mg, K Deficiencies" }
                 ],
                 "chartData": {
                     "production": {
-                        "labels": ["Jan-24", "Feb-24", "Mar-24", "Apr-24", "May-24", "Jun-24", "Jul-24", "Aug-24", "Sep-24", "Oct-24", "Nov-24", "Dec-24"],
-                        "ffb": [3574, 2816, 3881, 1696, 1845, 3498, 2379, 5328, 4562, 4676, 2769, 1188],
-                        "rainfall": [574, 16, 93, 148, 74, 72, 68, 97, 164, 131, 340, 168],
-                        "note": "*FFB production and rainfall data for 2024."
+                        "labels": ["Jan-25", "Feb-25", "Mar-25", "Apr-25", "May-25", "Jun-25", "Jul-25"],
+                        "ffb": [3194, 2192, 2663, 2992, 3268, 3839, 5165],
+                        "rainfall": [232, 90, 268, 250, 174, 85, 5],
+                        "note": "*FFB production and rainfall data for YTD July 2025."
                     },
                     "ageProfile": {
                         "labels": ["Young Mature (5-7Y)", "Prime Mature (8-13Y)"],
@@ -123,12 +123,12 @@
                     }
                 },
                 "observations": [
-                    "<b>Significant Rat Infestation:</b> February 2025 census shows rat damage is over 19% in all fields, with the highest at 32% in P10A. Baiting has not yet been carried out in 2025. <span class='observation-ref'>(PAR Pg. 5, 25)</span>",
-                    "<b>Delayed 2025 Manuring Program:</b> Application of Mixture B scheduled for Jan/Feb has not been completed due to disruptions from heavy rainfall. <span class='observation-ref'>(AR Pg. 4, 11; PAR Pg. 5)</span>",
-                    "<b>Low Harvester Productivity:</b> Productivity is low at 1.52 tons/man-day, despite an adequate labour force. <span class='observation-ref'>(PAR Pg. 12)</span>",
-                    "<b>Potassium Deficiency:</b> Orange spotting symptoms were observed in various fields, indicating K deficiency. <span class='observation-ref'>(AR Pg. 5, 24)</span>",
-                    "<b>Inconsistent Pruning:</b> While progressive pruning is ongoing, quality needs to improve in some areas (e.g., P10A) where dried hanging fronds were found. Over-pruning also detected. <span class='observation-ref'>(PAR Pg. 6, 35-37)</span>",
-                    "<b>Excellent Yield Growth in 2024:</b> The estate showed a 38% increase in yield per hectare in 2024 compared to 2023. <span class='observation-ref'>(PAR Pg. 6, 44)</span>"
+                    "<b>High Rat Infestation:</b> Rat infestation levels remain high despite baiting, requiring a proper baiting campaign for effective control. <span class='observation-ref'>(AR Pg. 6, 39; PAR Pg. 5, 25)</span>",
+                    "<b>Delayed 2025 Manuring Program:</b> Manuring progress is slow (41% complete as of July) due to limited fertilizer stock and delivery delays, causing deviation from the schedule. <span class='observation-ref'>(AR Pg. 4, 14; PAR Pg. 5)</span>",
+                    "<b>Nutrient Deficiencies Identified:</b> Foliar analysis from May 2025 indicates declining Nitrogen and Magnesium levels in over 50% of fields, with low Potassium also recorded in several blocks. <span class='observation-ref'>(AR Pg. 6, 29)</span>",
+                    "<b>Yield Deficit in 2025:</b> As of July 2025, the estate's yield is 7% lower than the same period in 2024, with Block P10A showing the largest deficit at -21%. <span class='observation-ref'>(AR Pg. 7, 47)</span>",
+                    "<b>Canopy Management Issues:</b> While pruning is ongoing, premature frond snapping due to water stress was noted in P10A. Inconsistent quality and over-pruning were also previously detected. <span class='observation-ref'>(AR Pg. 5, 23; PAR Pg. 6, 35-37)</span>",
+                    "<b>Low Harvester & Mechanization Productivity:</b> Harvester productivity remains low (1.52 MT/md). Additionally, in-field collection output from Badang and Timac machines is below optimal. <span class='observation-ref'>(AR Pg. 5, 21; PAR Pg. 12)</span>"
                 ],
                 "reports": {
                     "plantation": {
@@ -146,11 +146,11 @@
                         "Immature": "N/A"
                     },
                     "agronomy": {
-                        "Executive Summary": "Yield performance in 2024 was strong with significant improvement. However, rat infestation is a major concern for 2025. Manuring has been delayed by weather. Potassium deficiency is visible in several fields. (Source: AR, Pg. 4-6, 42)",
-                        "Nutrient Inputs/Progress of Manuring": "2024 manuring was fully completed. The 2025 program started in January but was disrupted by heavy rain. (Source: AR, Pg. 10-11)",
-                        "Agronomic Observation": "Harvesting intervals are slightly extended. Pruning is mostly complete, but some areas lagged in 2024. Rat infestations are significant. Potassium deficiency symptoms are visible. Ground vegetation is satisfactory. (Source: AR, Pg. 15-39)",
-                        "Yield Performance": "Yield improved by 38% in 2024 to 22.71 mt/ha. The increase is attributed to palm age and improved agronomic inputs. Crop loss from rat damage is a concern. (Source: AR, Pg. 40-42)",
-                        "Fertilizer Recommendation": "No changes to the 2025 fertilizer program. (Source: AR, Pg. 43)"
+                        "Executive Summary": "Yield as of July 2025 is 7% lower than 2024. The manuring program is behind schedule due to stock delays. Rat infestation remains a major concern despite baiting. Foliar analysis reveals N, Mg, and K deficiencies. Ganoderma infection was noted in P10A. (Source: AR, Pg. 4-7)",
+                        "Nutrient Inputs/Progress of Manuring": "As of July 2025, the manuring program is 41% complete, delayed by fertilizer stock and delivery issues. Mixture B application is at 38% and Rock Phosphate is at 56%. Inconsistent application quality was noted in P10A7. (Source: AR, Pg. 14-16)",
+                        "Agronomic Observation": "Harvesting intervals are slightly extended but acceptable. Canopy management is generally good, but premature frond snapping due to water stress was observed in P10A. Rat infestation is high. Ground vegetation control is satisfactory. Ganoderma has been detected in P10A, with mounding and deboling implemented. (Source: AR, Pg. 20-43)",
+                        "Yield Performance": "As of July 2025, the estate's yield is 11.16 mt/ha, a 7% deficit compared to the same period in 2024. Block P10A recorded the largest deficit (-21%), while P18H showed improvement (+21%). Production is expected to increase in Q3. (Source: AR, Pg. 47, 49)",
+                        "Fertilizer Recommendation": "The 2026 fertilizer program has been prepared. It recommends Mixture A and B as the main nutrient sources, with Rock Phosphate as an alternative P source. Dosages are reduced for blocks receiving EFB. (Source: AR, Pg. 50)"
                     },
                     "pinfosys": {
                         "CEO Financial Summary (Jan 2022)": "Total Income: RM 2,128,529.12<br>Estate Operating Profit: RM 1,674,787.30<br>Profit Margin: 78.7%<br>Net Current Assets: RM 21,692,955.71<br><span class='text-xs'>(Source: Pinfosys, Pg. 4, 136)</span>",
@@ -192,9 +192,9 @@
             function createEstateHTML(estate) {
                 const summaryMetricsHTML = Object.values(estate.summaryMetrics).map(metric => {
                     const colorClass = metric.title.includes('Area') ? 'bg-blue-50 text-blue-800' : 
-                                       metric.title.includes('Yield') ? 'bg-green-50 text-green-800' :
-                                       metric.title.includes('Cost') ? 'bg-orange-50 text-orange-800' :
-                                       metric.title.includes('Labour') ? 'bg-purple-50 text-purple-800' : 'bg-red-50 text-red-800';
+                                       metric.title.includes('Yield/Ha (2024') ? 'bg-green-50 text-green-800' :
+                                       metric.title.includes('Yield/Ha (YTD') ? 'bg-yellow-50 text-yellow-800' :
+                                       metric.title.includes('Cost') ? 'bg-orange-50 text-orange-800' : 'bg-red-50 text-red-800';
                     if (metric.lines) {
                         return `<div class="p-4 rounded-lg ${colorClass}"><h3 class="font-semibold">${metric.title}</h3>${metric.lines.map(line => `<p class="text-sm">${line}</p>`).join('')}</div>`;
                     }
@@ -216,7 +216,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-4 mb-8">${summaryMetricsHTML}</div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-4 border-b pb-2">Key Metrics & Agronomic Status</h3><div class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-4">${keyMetricsHTML}</div></div>
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
-                            <div class="chart-container"><h3 class="text-xl font-semibold mb-2 text-center">Monthly Production vs Rainfall (2024)</h3><canvas id="prodChart-${estate.id}"></canvas><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
+                            <div class="chart-container"><h3 class="text-xl font-semibold mb-2 text-center">Monthly Production vs Rainfall (YTD 2025)</h3><canvas id="prodChart-${estate.id}"></canvas><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
                             <div class="chart-container"><h3 class="text-xl font-semibold mb-2 text-center">Palm Age Profile</h3><canvas id="ageChart-${estate.id}"></canvas><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.ageProfile.note}</p></div>
                         </div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-2 border-b pb-2">Key Observations & Issues</h3><ul class="list-disc list-inside space-y-2 text-gray-700 mt-4">${observationsHTML}</ul></div>
@@ -343,3 +343,4 @@
     </script>
 </body>
 </html>
+
